--- a/practice/index.html
+++ b/practice/index.html
@@ -52,6 +52,8 @@
         
     </container>
 
+    <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, quae!</h2>
+
 
 </body>
 </html>
